--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TriviaGame"></activity>
+        <activity android:name=".TriviaGame" />
         <activity android:name=".BinGame" />
         <activity android:name=".MainMenu">
             <intent-filter>
