--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".TriviaAnswerActivity"></activity>
         <activity android:name=".TriviaGame" />
         <activity android:name=".BinGame" />
         <activity android:name=".MainMenu">
