--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,21 @@
         <activity android:name=".LevelSelection"
             android:screenOrientation="landscape"
             android:configChanges="orientation|keyboardHidden"></activity>
-        <activity android:name=".MultiPlayerGame" />
-        <activity android:name=".TriviaAnswerActivity" />
-        <activity android:name=".TriviaGame" />
-        <activity android:name=".BinGame" />
-        <activity android:name=".MainMenu">
+        <activity android:name=".MultiPlayerGame"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"/>
+        <activity android:name=".TriviaAnswerActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"/>
+        <activity android:name=".TriviaGame"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"/>
+        <activity android:name=".BinGame"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"/>
+        <activity android:name=".MainMenu"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
