Added animation to the answer activity. Put no action bar preference into styles. Added lock screen orientation to tilebased game. Corrected typos in questions.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         <activity android:name=".MultipleChoiceGame"
             android:screenOrientation="landscape"
             android:configChanges="orientation|keyboardHidden"></activity>
-        <activity android:name=".TileBasedGameActivity"></activity>
+        <activity android:name=".TileBasedGameActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"></activity>
         <activity android:name=".LevelSelection"
             android:screenOrientation="landscape"
             android:configChanges="orientation|keyboardHidden"></activity>
